# monitor-serverless-datalake

./: .gitignore  README.md  pyproject.toml
cdk/: README.md  app.py  cdk.json  config.py
cdk/base_stacks/: __init__.py  environment_stack.py  monitoring_stack.py
cdk/common/: utils.py
cdk/ingestion_stack/: __init__.py  glue_stack.py  lambda_stack.py
src/: README.md
src/datalake_monitoring/: Makefile  config.py  handler.py  local_exec.py
src/datalake_monitoring/commons/: ddb_glue_crawler_item.py  ddb_glue_job_item.py  ddb_lambda_item.py  utils.py
src/datalake_monitoring/commons/slack/: serverless_datalake_monitor.slackworkflow
src/sample_compute/glue/: glue_job_fail.py  glue_job_success.py
src/sample_compute/lambda/: lambda_fail.py  lambda_success.py
