[tool.poetry]
name = "serverless-datalake-management"
version = "1.2.0"
description = "Plug and play utility to monitor and alert on ETL failure"
authors = ["Virendhar Sivaraman <virendha@amazon.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0.0"
"aws-cdk-lib" = "^2.2.0"
"constructs" = ">=10.0.0,<11.0.0"
awswrangler = "^3.2.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
mypy = "^1.4.1"
pylint = "^2.16.1"
black = "^23.7.0"
boto3 = "^1.28.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true

